# db2_project

./: #Cargo.toml#  .#Cargo.toml  .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs  elm.json
client/app/src/: Api.elm  Icons.elm  Main.elm  Navbar.elm  Toolbar.elm
client/app/src/Api/: Report.elm
client/app/src/Pages/: Ranking.elm  SearchControl.elm  Welcome.elm
client/lib/: Cargo.toml
client/src/: Api.elm  Main.elm  Navbar.elm  Pages.elm  Toolbar.elm  Update.elm
client/src/Theme/: Body.elm  Icons.elm  Sidebar.elm  Toolbar.elm
src/: index.html  main.rs
src/app/: Cargo.toml  build.rs  custom.js  elm.js  main.rs
src/app/public/: custom.css  custom.js
src/app/src/: main.rs
src/realm/: Cargo.toml  adapters.rs  context.rs  data.rs  middleware.rs  mod.rs
src/realm/webview/: api.rs  app.rs  container.rs  middleware.rs  mod.rs
src/realm/webview/tests/: helper.rs  mod.rs
src/reports/: Cargo.toml  client_actor.rs  lib.rs  report_api.rs  report_manager.rs
src/reports/macros/: Cargo.toml
src/reports/macros/src/: lib.rs
