[package]
name = "schedule-backend"
version = "0.1.0"
authors = ["syfers"]
edition = "2018"

[lib]
name = "realm"
path = "src/realm/mod.rs"
build = "build.rs"

[[bin]]
name = "webview_application"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
ar = "x86_64-w64-mingw32-gcc-ar"

[target.x86_64-pc-windows-msvc]
linker = "x86_64-w64-mingw32-gcc"
ar = "x86_64-w64-mingw32-gcc-ar"

[dependencies]
web-view = { version = "0.6.3", features = ["edge"] }
serde = { version = "*", features = ["derive"] }
tokio-postgres = { version = "*" }
serde_json = { version = "*" }
tokio = { version = "*", features = ["rt", "rt-multi-thread"] }
env_logger = { version = "0.7.1" }
log = { version = "0.4.11" }
dotenv = { version = "0.15.0" }
futures = { version = "*" }
