[package]
name = "lib"
version = "0.1.0"
authors = ["syfers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { version = "0.2.68" }
js-sys = { version = "0.3.45" }
web-sys = { version = "0.3.45" }
