[package]
name = "realm"
version = "0.1.0"
authors = ["syfers"]
edition = "2018"

[lib]
name = "realm"
path = "mod.rs"

[dependencies]
web-view = { version = "0.6.3", features = ["edge"] }
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }
tokio = { version = "*", features = ["rt", "rt-multi-thread", "sync"] }
env_logger = { version = "0.7.1" }
log = { version = "0.4.11" }
dotenv = { version = "0.15.0" }
futures = { version = "*" }

[dev-dependencies]
tokio-postgres = { version = "*" }
