[package]
name = "realm"
version = "0.1.0"
authors = ["syfers"]
edition = "2018"

[lib]
name = "realm"
path = "mod.rs"

[dependencies]
web-view = { version = "0.6.3", features = ["edge"] }
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }
tokio = { version = "0.2", features = ["rt-core", "rt-threaded", "sync", "time"] }
futures = { version = "*" }

[dev-dependencies]
tokio-postgres = { version = "0.5.2" }
