[package]
name = "realm"
version = "0.1.0"
authors = ["syfers"]
edition = "2018"

[lib]
name = "realm"
path = "mod.rs"

[dependencies]
web-view = { version = "0.6.3", features = ["edge"] }
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }
tokio = { version = "0.2", features = ["time", "rt-util"] }
futures = { version = "*" }
double-checked-cell-async = { version = "2.0.2" }
actix = { version = "0.10.0" }
actix-rt = { version = "*" }
[dev-dependencies]
tokio-postgres = { version = "0.5.2" }
