[package]
name = "db2-project-reports"
version = "0.1.0"
authors = ["syfers"]
edition = "2018"

[lib]
name = "db2_project_reports"
path = "lib.rs"

[dependencies]
report-macros = { path = "macros" }
realm = { path = "../realm" }
serde_postgres = { version = "*" }
serde = { version = "*", features = ["derive"] }
tokio-postgres = { version = "0.5.2" }
serde_json = { version = "*" }
futures = { version = "*" }

[dev-dependencies]
tokio = { version = "0.2", features = ["rt-core", "rt-threaded"] }